<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="notification_channel_name" translatable="false">download_channel</string>
    <string name="notification_channel_id" translatable="false">download_channel_id</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">Loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ok">OK</string>

    <string name="id_hint">id:</string>
    <string name="url_hint">url:</string>
    <string name="created_date_hint">created date:</string>
    <string name="status_hint">status:</string>
    <string name="download_time_hint">download time:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="loading">Progress</string>
    <string name="detail">Detail</string>
    <string name="glide">Glide</string>
    <string name="retrofit">Retrofit</string>
    <string name="udacity_course">Udacity course</string>
    <string name="choose_file_desc">"Choose file to download"</string>


    <!-- urls !-->
    <string name="course_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="show">Show</string>

</resources>
