<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.screens.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".screens.detail.DetailActivity"
        tools:showIn="@layout/activity_detail"
        app:layoutDescription="@xml/detail_description">

        <LinearLayout
            android:id="@+id/labelsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/okButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.udacity.customview.ViewField
                android:id="@+id/statusView"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:hint="@string/status_hint"
                app:content="@{viewModel.downloadView.status}"
                app:contentColor="@{viewModel.downloadView.statusColorId}" />

            <com.udacity.customview.ViewField
                android:id="@+id/urlView"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:hint="@string/url_hint"
                app:content="@{viewModel.downloadView.downloadUrl}" />

            <com.udacity.customview.ViewField
                android:id="@+id/downloadTimeView"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:hint="@string/download_time_hint"
                app:content="@{viewModel.downloadView.downloadTime}" />

            <com.udacity.customview.ViewField
                android:id="@+id/dateView"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:hint="@string/created_date_hint"
                app:content="@{viewModel.downloadView.createdDate}" />
        </LinearLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/default_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>