<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="download"
            type="com.udacity.db.view.DownloadView" />
        <variable
            name="clicklistener"
            type="com.udacity.impl.DownloadListener" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:elevation="@dimen/elevation"
        android:onClick="@{() -> clicklistener.onClick(download)}"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_margin">

            <com.udacity.customview.ViewField
                android:id="@+id/id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/id_hint"
                app:content="@{download.downloadId.toString()}"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.udacity.customview.ViewField
                android:id="@+id/url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/url_hint"
                app:content="@{download.downloadUrl}"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id"/>

            <com.udacity.customview.ViewField
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/created_date_hint"
                app:content="@{download.createdDate}"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcId="@{download.statusIconId}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>